--- a/public/styles.css
+++ b/public/styles.css
@@ -4,39 +4,46 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  height: 100vh;
+  padding: 20px;
 }
-
-  
 
 main {
   border-radius: 15px;
-  margin-top: 50px;
   width: 600px;
   height: 600px;
   background-color: antiquewhite;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
+}
+
+.container {
+  display: grid;
+  grid-template: auto auto / repeat(5, 1fr);
   gap: 20px;
-  
 }
 
-.container{
-    display: grid;
-    grid-template: auto auto / repeat(5, 1fr);
-    gap: 20px;
-
+.container button {
+  height: 50px;
+  width: 50px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  border: none;
+  background-color: white;
+  font-size: 1.75rem;
+  font-weight: bold;
+  cursor: pointer;
 }
 
-.container button{
-    height: 50px;
-    width: 50px;
-    box-shadow: 0px 2px 2px rgba(0,0,0,0.15);
-    border-radius: 10px;
-    border: none;
-    background-color: white;
-    font-size: 1.75rem;
-    font-weight: bold;
-    cursor: pointer;
+main button {
+  height: 50px;
+  width: 150px;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+  border: none;
+  background-color: #ffa125;
+  font-weight: bold;
+  cursor: pointer;
 }
